cabal-version:      3.0
name:               forum
version:            0.0.8
-- synopsis:
-- description:
license:            BSD-2-Clause

license-file:       LICENSE

author:             nks

maintainer:         nks@9k.vc

category:           Web
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall -fwrite-ide-info -hiedir .hiefiles

library
  import: warnings
  default-language: GHC2021
  exposed-modules:
    Application
    Foundation
    Home
    Settings
    Model
    Astronomy
  other-modules:
    Paths_forum
  hs-source-dirs:
    src
  build-depends:
      base,
      classy-prelude-yesod,
      esqueleto,
      yesod-auth,
      yesod-auth-hashdb,
      yesod-core,
      yesod-form,
      yesod-static,
      http-client,
      persistent,
      persistent-postgresql,
      warp,
      template-haskell,
      monad-logger,
      http-client-tls,
      fast-logger,
      yesod,
      aeson,
      file-embed,
      yaml,
      shakespeare,
      thyme,
      lens

executable forum
    import:           warnings

    main-is:          Main.hs

    -- other-modules:
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -fdefer-type-errors -Werror=deferred-type-errors -Werror=deferred-out-of-scope-variables -fno-defer-typed-holes
    -- other-extensions:

    build-depends:
      base,
      forum,
      classy-prelude-yesod,
      esqueleto,
      yesod-auth,
      yesod-auth-hashdb,
      yesod-core,
      yesod-form,
      yesod-static,
      http-client,
      persistent,
      persistent-postgresql,
      warp,
      template-haskell,
      monad-logger,
      http-client-tls,
      fast-logger,
      yesod,
      aeson,
      file-embed,
      yaml,
      shakespeare,
      thyme,
      tasty,
      tasty-hunit,
      lens

    hs-source-dirs:   app
    default-language: GHC2021

test-suite test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    base,
    tasty,
    tasty-hunit,
    thyme,
    lens
  hs-source-dirs: test
  default-language: GHC2021
